--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <title>Firefly 2018</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script type="text/javascript">
-    function redirect() {
-      window.location = "http://google.com";
+    window.onload = function() {
+      window.location.assign("http://stackoverflow.com");
     }
-    window.onload = codeAddress;
   </script>
   </head>
 </html>
