--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script type="text/javascript">
     window.onload = function() {
-      window.location.assign("http://stackoverflow.com");
+      window.location.assign("http://gs.tads.io/?storyfile=http://uscms1.fltech-grid3.fit.edu/Firefly.t3");
     }
   </script>
   </head>
