--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
 <html>
   <head>
   <title>Firefly 2018</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script type="text/javascript">
-    window.onload = function() {
-      window.location.assign("http://gs.tads.io/?storyfile=http://uscms1.fltech-grid3.fit.edu/Firefly.t3");
-    }
-  </script>
+  <meta http-equiv="refresh" content="0; URL='http://gs.tads.io/?storyfile=http://uscms1.fltech-grid3.fit.edu/Firefly.t3'" />
   </head>
 </html>
