Update index with slightly more permanent t3 link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head>
   <title>Firefly 2018</title>
-  <meta http-equiv="refresh" content="0; URL='http://gs.tads.io/?storyfile=http://uscms1.fltech-grid3.fit.edu/Firefly.t3'" />
+  <meta http-equiv="refresh" content="0; URL='http://gs.tads.io/?storyfile=http://my.fit.edu/~dpiquero2015/firefly.t3'" />
   </head>
 </html>
